# nostr-postgres-db

./: Cargo.toml  LICENSE
.github/: copilot-instructions.md
examples/: postgres-relay.rs
src/: lib.rs  migrations.rs  model.rs  postgres.rs  query.rs
src/migrations/: postgres.rs
